# nairobi-transit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  nairobi_transit_payment_system.md
.do/: app.yaml
docs/: index.md
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend-old/: index.html
frontend-old/css/: style.css
frontend-old/js/: api.js  app.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/conductor/: page.tsx
frontend/src/app/crew/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/map/: page.tsx
frontend/src/app/planner/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: TransitMap.tsx  nav.tsx
frontend/src/content/: docs.md
frontend/src/lib/: api.ts  markdown.ts
scripts/: generate_gis_sql.py
server/: .env.example  Cargo.toml  Dockerfile
server/migrations/: 001_create_vehicles.sql  002_create_conductors.sql  003_create_trips.sql  004_create_payments.sql  005_transit_gtfs.sql  006_seed_nairobi_routes.sql  007_stop_aliases.sql
server/src/: config.rs  error.rs  main.rs
server/src/cache/: session.rs
server/src/db/: mod.rs  payments.rs  transit.rs  trips.rs  vehicles.rs
server/src/domain/: mod.rs  payment.rs  transit.rs  trip.rs  vehicle.rs
server/src/handlers/: conductor.rs  gps.rs  mod.rs  pay_page.rs  qr.rs  registration.rs  settings.rs  stk.rs  transit.rs  ussd.rs  webhook.rs  ws.rs
server/src/services/: africastalking.rs  daraja.rs  mod.rs  qr_generator.rs  vehicle_code.rs
(+3 files in other folders)
